[package]
name = "conway"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[dependencies]
macroquad = "0.3"
ndarray = "0.15"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0

[profile.release]
lto = "thin"

[[bench]]
name = "ndarray_bench"
harness = false
